# libs3map

./: .gitignore  .gitmodules  CMakeLists.txt  NOTICE  README  cli.c  config.h.in  libs3map.pc.in  minimap.c  s3mapConfig.cmake.in
src/: read.c  s3map.h  s3map_types.h  structure.c  types.h
